Bug 316256 - Kleopatra in KDEPIM 4.10.1 fails to build
Summary: Kleopatra in KDEPIM 4.10.1 fails to build
Status: RESOLVED FIXED
Alias: None
Product: kleopatra
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-03-06 22:24 UTC by Armin K.
Modified: 2013-04-24 17:22 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10.3
Sentry Crash Report:


Attachments
Patch to fix the bug (1.03 KB, patch)
2013-04-03 05:46 UTC, Sven-Hendrik Haase
Details
libkleo patch (481 bytes, patch)
2013-04-24 17:22 UTC, Christoph Feck
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Armin K. 2013-03-06 22:24:09 UTC
Generating assuanserverconnection.moc
usr/include/boost/type_traits/detail/has_binary_operator.hp:50: Parse error at "BOOST_JOIN"
automoc4: process for /home/armin/src/kde/kdepim-4.10.1/kleopatra/assuanserverconnection.moc failed: Unknown error
pid to wait for: 0

#304111 fixed build partialy for someone, but I am still seeing this in 4.10.1.

I have Boost 1.53.0

Reproducible: Always

Steps to Reproduce:
install Boost 1.53.0 and unpatches Automoc4 from upstream and try to build kdepim 4.10.1
Comment 1 Sven-Hendrik Haase 2013-04-03 05:46:04 UTC
Created attachment 78592 [details]
Patch to fix the bug
Comment 2 Laurent Montel 2013-04-03 06:02:22 UTC
Git commit 2573a6678d3415d7de8024a417d8f2e92b8c7611 by Montel Laurent.
Committed on 03/04/2013 at 08:01.
Pushed by mlaurent into branch 'KDE/4.10'.

Fix Bug 316256 - Kleopatra in KDEPIM 4.10.1 fails to build
FIXED-IN: 4.10.3

Apply patch from Sven-Hendrik Haase
It compiles here, and for him.
So I hope that it will fix this bug.

M  +1    -1    kleopatra/models/keylistmodel.cpp
M  +2    -0    kleopatra/uiserver/assuanserverconnection.cpp

http://commits.kde.org/kdepim/2573a6678d3415d7de8024a417d8f2e92b8c7611
Comment 3 Christoph Feck 2013-04-24 17:22:21 UTC
Created attachment 79419 [details]
libkleo patch

Trying to compile today's master, I needed to apply this patch to make kdepim compile. I could not verify, if omitting the boost include breaks binary compatibility.