Fix Bug 316256 - Kleopatra in KDEPIM 4.10.1 fails to build

BUG: 316256
FIXED-IN: 4.10.3

Apply patch from Sven-Hendrik Haase
It compiles here, and for him.
So I hope that it will fix this bug.