kleopatra/models/keylistmodel.cpp
@@ -55,13 +55,13 @@
 
 #include <gpgme++/key.h>
 
-#include <boost/bind.hpp>
 
 #ifdef _WIN32_WCE
 #define BOOST_ALL_NO_LIB
 #endif
 
 #ifndef Q_MOC_RUN // QTBUG-22829
+#include <boost/bind.hpp>
 #include <boost/graph/topological_sort.hpp>
 #include <boost/graph/adjacency_list.hpp>
 #endif
